# ktsstudio-final-project

./: README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
bot/: Dockerfile  alembic.ini  config.yml  main.py  pyproject.toml  requirements.txt
bot/app/bot/: client.py  keyboards.py  texts.py
bot/app/bot/handlers/: callback.py  command.py
bot/app/bot/handlers/callbacks/: buzzer.py  join.py  leave.py
bot/app/bot/handlers/commands/: answer.py  play.py  start.py  stop_game.py
bot/app/bot/handlers/utils/: users.py
bot/app/games/: service.py
bot/app/games/models/: games.py  questions.py  rounds.py  teams.py
bot/app/games/services/: game.py  renderer.py  round.py  setup.py  timer.py
bot/app/games/services/round/: round_service.py
bot/app/games/services/round/handlers/: base.py  (+3 more)
bot/app/recovery/: heartbeat.py  recovery.py  setup.py
bot/app/rmq/: __init__.py  rabbitmq.py  rmq_callback.py  utils.py
bot/app/services/: game.py  renderer.py  setup.py
bot/app/services/round/: round_service.py
bot/app/services/round/handlers/: base.py  buzzer_answer.py  faceoff.py  teamplay.py
bot/app/store/: __init__.py
bot/app/store/cache/: cache.py
bot/app/store/database/: database.py
bot/app/store/database/migrations/: env.py
bot/app/store/games/: games_accessor.py  questions_accessor.py  rounds_accessor.py  teams_accessor.py
bot/app/store/users/: accessor.py
bot/app/users/: models.py
bot/app/web/: app.py  config.py  routes.py
bot/tests/: conftest.py  fixtures.py  test_config.yml
bot/tests/bot_handlers/integrations/: test_answer.py  test_buzzer.py  test_join.py  test_play.py  test_stop_game.py
bot/tests/bot_handlers/unit/: test_handler_bot_unit.py
bot/tests/rmq/: test_rmq_integration.py  test_rmq_unit.py
webhook/: Dockerfile  config.yml  main.py  pyproject.toml  requirements.txt
webhook/app/bot/: routes.py  webhook.py
webhook/app/rmq/: __init__.py  rabbitmq.py
webhook/app/web/: app.py  config.py  routes.py
webhook/tests/: config.yml  conftest.py  test_config.py  test_webhook.py
webhook/tests/fixtures/: rabbitmq.py
(+69 files in other folders)
