[project]
name = "bot"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aio-pika==9.5.7",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiormq==6.9.0",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "idna==3.10",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "multidict==6.6.4",
    "pamqp==3.3.0",
    "propcache==0.3.2",
    "PyYAML==6.0.3",
    "redis==6.4.0",
    "typing_extensions==4.15.0",
    "yarl==1.20.1",
    "db-core"
]

[tool.uv.sources]
db-core = { path = "../db_core", editable = true }

[tool.uv]
